# ECS_library_example-block_invaders

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  format.sh  main.cpp  run.sh
game/: main.cpp
game/src/: benchmark.hpp  components.hpp  core.hpp  entities.hpp  game.hpp  renderer.hpp  stages.hpp  ui.hpp  update.hpp  utilities.hpp
game/src/systems/: ai.hpp  attack.hpp  collision.hpp  damage.hpp  death.hpp  game.hpp  health.hpp  input.hpp  item.hpp  movement.hpp  player.hpp  position.hpp  score.hpp  ui.hpp
src/: core.hpp  renderer.hpp
src/systems/: collision.hpp  death.hpp  game.hpp  item.hpp  movement.hpp  position.hpp  ui.hpp
